Updated skills section

--- a/ArtemYankovResume_10_31_13.tex
+++ b/ArtemYankovResume_10_31_13.tex
@@ -41,7 +41,7 @@
 \moveleft.5\hoffset\centerline{Ann Arbor, MI 48105}
 \moveleft.5\hoffset\centerline{yankovai@umich.edu}
 \moveleft.5\hoffset\centerline{(401) 206-9133}
-\moveleft.5\hoffset\centerline{Blog: http://1oclockbuzz.wordpress.com/}
+\moveleft.5\hoffset\centerline{https://sites.google.com/a/umich.edu/yankovai/}
 \moveleft.5\hoffset\centerline{GitHub: https://github.com/yankovai}
 
 %----------------------------------------------------------------------------------------
@@ -63,11 +63,11 @@ A position that utilizes computational science and mathematical modeling to solv
 \section{EDUCATION}
 
 \textbf{University of Michigan} \hfill Ann Arbor, MI \\
-{\sl Ph.D,} Nuclear Engineering and Radiological Sciences \hfill Expected 2014
+{\sl Ph.D} Nuclear Engineering and Radiological Sciences \hfill Expected 2014
 
 \textbf{Rose-Hulman Institute of Technology} \hfill Terre Haute, IN \\
-{\sl B.S.,} Mathematics \hfill May, 2010 \\
-{\sl B.S.,} Physics \\
+{\sl B.S.} Mathematics \hfill May, 2010 \\
+{\sl B.S.} Physics \\
 Minor: Computational Science \\
 Clarence P. Sousley Award for demonstration of exceptional performance in the mathematical sciences.
  
@@ -77,9 +77,9 @@ Clarence P. Sousley Award for demonstration of exceptional performance in the ma
 
 \section{SKILLS} 
 
-{\sl Programming Languages:} Python, Fortran, SQL, \LaTeX, Matlab, shell scripting languages \\
-{\sl Libraries:} Numpy, SciPy, matplotlib, scikit-learn, MPI \\
-{\sl Software:} Maple, Minitab, Dakota, Tableau, numerical linear algebra packages \\
+{\sl Programming Languages:} Python, R, Fortran, SQL, Bash, \LaTeX, Matlab \\
+{\sl Libraries:} Numpy, SciPy, matplotlib, scikit-learn, BeautifulSoup, pandas, ggplot2 \\
+{\sl Software:} Maple, Minitab, Dakota, Tableau \\
 {\sl Operating Systems:} Unix, Windows, OS X \\
 {\sl Machine Learning:} MapReduce, Neural Networks, Logistic/Linear Regression, SVM
  
@@ -89,7 +89,7 @@ Clarence P. Sousley Award for demonstration of exceptional performance in the ma
  
 \section{EXPERIENCE}
 
-{\sl Graduate Student Research Assistant} \hfill July 2010-present \\
+{\sl Research Assistant} \hfill July 2010-present \\
 University of Michigan, Department of Nuclear Engineering, Ann Arbor, MI
 
 \begin{itemize} \itemsep -2pt % Reduce space between items
@@ -110,7 +110,7 @@ Idaho National Laboratory, Idaho Falls, ID
 {\sl Research Experience for Undergraduates} \hfill Summer 2008 \\
 Brigham Young University, Department of Mathematics, Provo, UT 
 \begin{itemize} 
-\item Research in Lagrangian formulations of mechanics with designer conservation laws. 
+\item Researched Lagrangian formulations of mechanics with designer conservation laws. 
 \end{itemize} 
 
 %----------------------------------------------------------------------------------------
@@ -125,7 +125,7 @@ A. Yankov, B. Collins, M. Klein, et al., "A Two-Step Approach to Uncertainty Qua
 
 A. Yankov, B. Collins, M. A. Jessee, et al., "A Generalized Adjoint Approach for Quantifying Reflector Assembly Discontinuity Factor Uncertainties," \textit{Proc. PHYSOR 2012}, Knoxville, Tennessee, USA, April 15–20 (2012). %\\
 \begin{itemize} 
-\item Best Student Paper Award at PHYSOR 2012.
+\item Won best student paper award.
 \end{itemize}
 
 A. Yankov, M. Klein, M. A. Jessee, et al., "Comparison of XSUSA and Two-Step Approaches for Full-Core Uncertainty Quantification," \textit{Proc. PHYSOR 2012}, Knoxville, Tennessee, USA, April 15–20 (2012).
@@ -140,7 +140,7 @@ Reduced Order Modeling in General Relativity \hfill June, 2013 \\
 California Institute of Technology, Pasadena, CA
 
 Mathematics and Computation \hfill May, 2013 \\
-American Nuclear Society, Sun Valley, Idaho
+American Nuclear Society, Sun Valley, ID
 
 Uncertainty Analysis in Best-Estimate Modeling \hfill May, 2012 \\
 Karlsruhe Institute of Technology, Karlsruhe, Germany
@@ -159,9 +159,11 @@ Argonne National Laboratory, Argonne, IL
 
 Tough Mudder 2012 \\
 Detroit Free Press Half-Marathon 2012 \\
-Ann Arbor Marathon 2013 \\
+Ann Arbor Marathon 2013 (3:45) \\
+Detroit Free Press Marathon 2013 (3:35) \\
 Ann Arbor Parks and Recreation Ice Hockey \\
 Predictive Analytics of Southeast Michigan Meetup Group \\
+Blogging \\
 Kaggle 
 
 %----------------------------------------------------------------------------------------
