Added Apache Pig to skills

--- a/ArtemYankovResume_10_31_13.tex
+++ b/ArtemYankovResume_10_31_13.tex
@@ -77,7 +77,7 @@ Clarence P. Sousley Award for demonstration of exceptional performance in the ma
 
 \section{SKILLS} 
 
-{\sl Programming Languages:} Python, R, Fortran, SQL, Bash, \LaTeX, Matlab \\
+{\sl Programming Languages:} Python, R, Fortran, SQLite, bash scripting, \LaTeX, Matlab, Apache Pig \\
 {\sl Libraries:} Numpy, SciPy, matplotlib, scikit-learn, BeautifulSoup, pandas, ggplot2 \\
 {\sl Software:} Maple, Minitab, Dakota, Tableau \\
 {\sl Operating Systems:} Unix, Windows, OS X \\
