Minor grammatical fix

--- a/ArtemYankov_Resume.tex
+++ b/ArtemYankov_Resume.tex
@@ -64,7 +64,7 @@
 \section{EXPERIENCE}
 
 {\sl Data Scientist} \hfill July 2010-present \\
-University of Michigan, Ann Arbor, MI
+Ann Arbor, MI
 
 \begin{itemize} \itemsep -2pt % Reduce space between items
 \item StackOverflow Query Tag Extraction
@@ -75,7 +75,7 @@ University of Michigan, Ann Arbor, MI
 \end{itemize}
 \item College Basketball Prediction
 \begin{itemize}
-\item Scraped a decade’s worth of college basketball data from sports-reference.com/cbb using BeautifulSoup and stored results in SQLite database.  
+\item Scraped a decade's worth of college basketball data from sports-reference.com/cbb using BeautifulSoup and stored results in SQLite database.  
 \item Analyzed data and developed a logistic regression model to predict the outcome of unplayed games. 
 \item Ranked all college basketball teams based on simulations of predictive model. 
 \item Created a visualization of predictive model performance using Tableau.
@@ -92,10 +92,10 @@ University of Michigan, Ann Arbor, MI
 University of Michigan, Department of Nuclear Engineering, Ann Arbor, MI
 
 \begin{itemize} \itemsep -2pt % Reduce space between items
-\item Working with Idaho National Laboratory and Sandia National Laboratory to fold high fidelity computer simulations and experimental data for the creation of optimized nuclear fuel performance models. 
-\item Research in how uncertainties in reactor simulation code input parameters propagate to output predictions made by the code.
+\item Worked with Idaho National Laboratory and Sandia National Laboratory to fold high fidelity computer simulations and experimental data towards the creation of optimized nuclear fuel performance models. 
+\item Research in how uncertainties in reactor simulation code input parameters propagate to output predictions.
 \begin{itemize}
-\item Extensive collaboration with researchers at Oak Ridge National Laboratory.
+\item Extensive collaboration with researchers from Oak Ridge National Laboratory.
 \item Results of research published in leading journal and awarded first prize at a major technical conference.
 \end{itemize}
 \item Implemented numerical linear algebra routines into primary software used by Nuclear Regulatory Commission to simulate nuclear reactor accident scenarios.
