--- a/ArtemYankov_Resume.tex
+++ b/ArtemYankov_Resume.tex
@@ -63,46 +63,60 @@
  
 \section{EXPERIENCE}
 
-{\sl Data Scientist} \hfill July 2010-present \\
-Ann Arbor, MI
+{\sl Data Scientist Intern} \hfill May 2014-present \\
+Globys, Seattle, WA
 
 \begin{itemize} \itemsep -2pt % Reduce space between items
-\item StackOverflow Query Tag Extraction
-\begin{itemize}
-\item Used Python to analyze over 6,000,000 StackOverflow queries and corresponding tags using MapReduce-type framework.  
-\item Reformulated raw textual data to a useful form and placed into SQL database for further processing.
-\item Developed an algorithm to automatically predict new tags based on similarity to queries in training data set. 
-\end{itemize}
-\item College Basketball Prediction
-\begin{itemize}
-\item Scraped a decade's worth of college basketball data from sports-reference.com/cbb using BeautifulSoup and stored results in SQLite database.  
-\item Analyzed data and developed a logistic regression model to predict the outcome of unplayed games. 
-\item Ranked all college basketball teams based on simulations of predictive model. 
-\item Created a visualization of predictive model performance using Tableau.
-\end{itemize}
-\item Twitter User Cravings
-\begin{itemize}
-\item Used Twitter Streaming API to investigate cravings of Twitter users. 
-\item Utilized Apache Pig to filter and process relevant data. 
-\item Created a visualization application using Tableau to present results. 
-\end{itemize}
+\item Developed a simulator for the usage behavior of mobile phone subscribers in a contextual marketing framework using machine learning and statistical data analysis.
+\item Researched and developed algorithms for predicting customer churn, including Bayesian Bandits and Hidden Markov Models. 
 \end{itemize}
 
 {\sl Graduate Student Research Assistant} \hfill July 2010-present \\
 University of Michigan, Department of Nuclear Engineering, Ann Arbor, MI
 
 \begin{itemize} \itemsep -2pt % Reduce space between items
-\item Worked with Idaho National Laboratory and Sandia National Laboratory to fold high fidelity computer simulations and experimental data towards the creation of optimized nuclear fuel performance models. 
+\item Applied statistical and machine learning techniques to analyze the phenomenon of fission gas release in nuclear fuel performance. 
+\begin{itemize}
+\item Involved folding together experimental data and computer simulation results to improve predictive capabilities of computer codes. 
+\end{itemize}
 \item Research in how uncertainties in reactor simulation code input parameters propagate to output predictions.
 \begin{itemize}
-\item Extensive collaboration with researchers from Oak Ridge National Laboratory.
+\item Extensive collaboration with researchers from Oak Ridge National Laboratory to develop algorithms for quantifying uncertainties in nuclear reactor simulators when faced with large numbers of correlated, stochastic inputs.
 \item Results of research published in leading journal and awarded first prize at a major technical conference.
 \end{itemize}
 \item Implemented numerical linear algebra routines into primary software used by Nuclear Regulatory Commission to simulate nuclear reactor accident scenarios.
 \end{itemize}
 
 %----------------------------------------------------------------------------------------
+%	DATA SCIENCE PROJECTS SECTION
+%----------------------------------------------------------------------------------------
 
+\section{PERSONAL \\ PROJECTS}
+
+{\sl StackOverflow Query Tag Extraction} 
+
+\begin{itemize} \itemsep -2pt % Reduce space between items
+\item Used Python to analyze over 6,000,000 StackOverflow queries and corresponding tags using MapReduce-type framework.  
+\item Reformulated raw textual data to a useful form and placed into SQL database for further processing.
+\item Developed an algorithm to automatically predict new tags based on similarity to queries in training data set with over 80\% accuracy.
+\end{itemize}
+
+{\sl NCAA College Basketball Prediction} 
+
+\begin{itemize} \itemsep -2pt % Reduce space between items
+\item Scraped a decade's worth of college basketball data from sports-reference.com/cbb using BeautifulSoup and stored results in SQLite database.  
+\item Analyzed data and developed a logistic regression model to predict the outcome of unplayed games with some 14\% lift. 
+\item Ranked all college basketball teams based on simulations of predictive model. 
+\item Created a visualization of predictive model performance using Tableau.
+\end{itemize}
+
+{\sl Twitter User Cravings}
+
+\begin{itemize} \itemsep -2pt % Reduce space between items
+\item Used Twitter Streaming API to investigate cravings of Twitter users. 
+\item Utilized Apache Pig to filter and process relevant data. 
+\item Created a visualization application using Tableau to present results. 
+\end{itemize}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
